--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 			<div class="medium-12 large-12 columns">
 				<h1>Chiusura festività</h1>
 				<p>Siamo chiusi fino al 4 Gennaio compreso.<br> Riapriamo mercoledì 5 Gennaio.</p>
+				<p>Auguri di Buone Feste<p>
 			</div>
 		</div> 
 		<!-- <div class="row">
@@ -131,14 +132,14 @@
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-			</div> -->
+			</div> 
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
 				<p><strong>Aperto dal Giovedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-			</div>
+			</div>  -->
 			<!-- <div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
