--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		</div>
 	</header>
 <!-- fine header -->
-	<div class="panel-home-2n">
+<!-- 	<div class="panel-home-2n">
 		<div class="row">
 			<div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
 				<h1>Covid</h1>
@@ -103,20 +103,20 @@
 			<div class="medium-6 large-6 medium-push-6 large-push-6 columns">
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
-			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns"> -->
 				<!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno, <strong>non è necessario avere il green pass</strong>.</p> -->
-				<p>Per mangiare all'interno è <strong>obbligatorio il green pass</strong>.</p>
-				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
+				<!-- <p>Per mangiare all'interno è <strong>obbligatorio il green pass</strong>.</p>
+				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p> -->
 				<!-- <a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a> -->
-			</div>
+		<!-- 	</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="panel-home-n">
 		 <div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Chiusura festività</h1>
-				<p>Siamo chiusi fino al 4 Gennaio compreso.<br> Riapriamo mercoledì 5 Gennaio.</p>
-				<p>Auguri di Buone Feste<p>
+				<p>Siamo chiusi fino al 4 Gennaio compreso.<br> Via aspettiamo Mercoledì 5 Gennaio.</p>
+				<p>Tanti Auguri di Buone Feste da tutti noi.<p>
 			</div>
 		</div> 
 		<!-- <div class="row">
