--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		</div>
 	</header>
 <!-- fine header -->
-<!-- 	<div class="panel-home-2n">
+	<div class="panel-home-2n">
 		<div class="row">
 			<div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
 				<h1>Covid</h1>
@@ -103,23 +103,23 @@
 			<div class="medium-6 large-6 medium-push-6 large-push-6 columns">
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
-			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns"> -->
+			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
 				<!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno, <strong>non è necessario avere il green pass</strong>.</p> -->
-				<!-- <p>Per mangiare all'interno è <strong>obbligatorio il green pass</strong>.</p>
-				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p> -->
+				<p>Per mangiare all'interno è <strong>obbligatorio il green pass</strong>.</p>
+				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<!-- <a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a> -->
-		<!-- 	</div>
+			</div>
 		</div>
-	</div> -->
+	</div>
 	<div class="panel-home-n">
-		 <div class="row">
+		 <!-- <div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Chiusura festività</h1>
 				<p>Siamo chiusi fino al 4 Gennaio compreso.<br> Via aspettiamo Mercoledì 5 Gennaio.</p>
 				<p>Tanti Auguri di Buone Feste da tutti noi.<p>
 			</div>
-		</div> 
-		<!-- <div class="row">
+		</div>  -->
+		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
 			</div>
@@ -132,14 +132,14 @@
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-			</div> 
+			</div>  -->
 			<div class="medium-6 large-6 columns">
-				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
+				<h2>Ristorante</h2>
 				<p><strong>Aperto dal Giovedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-			</div>  -->
+			</div>
 			<!-- <div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
@@ -148,7 +148,7 @@
                 <span class="hide-for-small extra-space"><a role="button" href="https://webview.passbot.it?venue=Ca'_Vecchia_Beerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="https://webview.passbot.it?venue=Ca'_Vecchia_Beerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
-			</div> 
+			</div>  -->
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
@@ -191,7 +191,7 @@
 				<p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa sotto i denti?</p>
 				<p>Abbiamo un menù anche per questo.</p>
 				<a role="button" href="https://www.beerstrot.it/asporto/">Scopri il Menù d'Asporto &rarr;</a>
-			</div> -->
+			</div>
 		</div>
 	</div>
 	<div class="panel-home-2n">
@@ -260,7 +260,7 @@
 						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
 					</li>
-					<!-- <li>
+					<li>
                        	<h4 class="subheader">Orari</h4>
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                        	<div class="row">
@@ -268,15 +268,7 @@
                                 <p><strong>Aperto dal Giovedì alla Domenica.</strong><br>Dalle 19:00 alle 23:00</p>
                             </div>
                        	</div>
-                 	</li> -->
-
-                         <li>
-                        <h4 class="subheader">Chiusi per ferie</h4>
-                        <div class="row">
-                            <div class="large-12 medium-12 small-12 columns">
-                                <p>Riapriamo Mercoledì 5 Gennaio</p>
-                            </div>
-                    </li>
+                 	</li>
 		  			<li>
 		  				<h4 class="subheader">Dove siamo</h4>
 		                <p>
