--- a/menu/index.html
+++ b/menu/index.html
@@ -472,6 +472,12 @@
                                 <h3>Landbier 1857 50cl <span class="price">6</span></h3>
                                 <p>Helles tedesca non filtrata 5,3% <br><em>Birrificio Bayreuther</em></p>
                             </li>
+
+<li>
+                                <h3>Landbier Dunkel 50cl <span class="price">6</span></h3>
+                                <p>Rossa tedesca 5,3% <br><em>Birrificio Bayreuther</em></p>
+                            </li>
+
                             <li>
                                 <h3>Weisse 50cl <span class="price">6</span></h3>
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
