--- a/menu/index.html
+++ b/menu/index.html
@@ -224,7 +224,8 @@
                         </li> -->
                          <li>
                             <h3>Inverno <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate</p>
+                            <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <!-- <li>
                             <h3>Primavera <span class="price">9,5 / doppio 14,9</span></h3>
@@ -237,7 +238,8 @@
                         </li> 
                          <li>
                             <h3>Cacio e Pepe <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, pecorino vallesina, guanciale, pepe</p>
+                            <p>Manzo, pecorino vallesina, guanciale, pepe<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> 
                   <!--      <li>
                             <h3>Mantovano <span class="price">10,5 / doppio 14,9</span></h3>
