--- a/menu/index.html
+++ b/menu/index.html
@@ -516,10 +516,10 @@
                                 <h3>Tulio 50cl <span class="price">6</span></h3>
                                 <p>Rye IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
-                            <li>
+                       <!--     <li>
                                 <h3>Marina 50cl <span class="price">6</span></h3>
                                 <p>American pale ale 6,4% <br><em>Birrificio Mukkeller</em></p>
-                            </li>
+                            </li>  -->
                     <!--       <li>
                                 <h3>Hattori Hanzo 50cl <span class="price">6</span></h3>
                                 <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
@@ -570,6 +570,10 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Rosso Marche IGT <span class="price">Quarto 3 / Litro 8</span></h3>
+                            <p><em>Cantina di Tavignano</em></p>
+                        </li>
+                        <li>
+                            <h3>lacrima<span class="price">Quarto 3 / Litro 8</span></h3>
                             <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
