--- a/menu/index.html
+++ b/menu/index.html
@@ -573,7 +573,7 @@
                             <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
-                            <h3>lacrima<span class="price">Quarto 3 / Litro 8</span></h3>
+                            <h3>Novis<span class="price">Quarto 3 / Litro 8</span></h3>
                             <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
