--- a/menu/index.html
+++ b/menu/index.html
@@ -324,10 +324,10 @@
                             <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
-                                <h3>Birramisù <span class="price">5</span></h3>
+                                <!-- <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                            </li>
+                            </li> -->
 			    <li>
                                 <h3>Whoop<span class="price">5</span></h3>
                                 <p>Morbido biscotto al cioccolato ripieno di burro di arachidi<br>
