--- a/menu/index.html
+++ b/menu/index.html
@@ -323,8 +323,8 @@
                                 <p>Brownie con nocciole. Servito con crema al mascarpone e rhum <br>
                             <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
-                            <li>
-                                <!-- <h3>Birramisù <span class="price">5</span></h3>
+                            <!-- <li>
+                                <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li> -->
