--- a/menu/index.html
+++ b/menu/index.html
@@ -359,10 +359,10 @@
                             <h3>Helles</h3>
                             <p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
                         </li>
-                   <!--     <li>
+                        <li>
                             <h3>Italicum</h3>
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Bock</h3>
                             <p>Rossa stile tedesco dolce 6,5% <br><em>Birrificio Forst</em></p>
@@ -376,9 +376,9 @@
                             <p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
                        <li>
-                            <h3>Ape Regina</h3>
+                        <!--    <h3>Ape Regina</h3>
                             <p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
-                        </li>
+                        </li> -->
                         <li>
                             <h3>Thee Bitter</h3>
                             <p>Bitter ale ambrata 4,2% <br><em>Birrificio Resina</em></p>
