--- a/menu/index.html
+++ b/menu/index.html
@@ -355,7 +355,7 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Birre artigianali alla Spina <br><small>Piccola 4 / Media 6 / Caraffa 12</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                       <li>
+                        <li>
                             <h3>Helles</h3>
                             <p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
                         </li>
@@ -367,16 +367,16 @@
                             <h3>Bock</h3>
                             <p>Rossa stile tedesco dolce 6,5% <br><em>Birrificio Forst</em></p>
                         </li>
-                   <!--     <li>
+                        <!-- <li>
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
-                        </li>  -->
-                      <!--  <li>
+                        </li> -->
+                        <!-- <li>
                             <h3>Palmares</h3>
                             <p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
-                       <li>
-                        <!--    <h3>Ape Regina</h3>
+                        <!-- <li>
+                        <h3>Ape Regina</h3>
                             <p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
                         </li> -->
                         <li>
@@ -407,11 +407,15 @@
                             <h3>From NZ to MC</h3>
                             <p>IPA 6,2% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-                      <li>
+                        <li>
                             <h3>Velvet Suit</h3>
                             <p>New England IPA 6,5% <br><em>Birrificio MC-77</em></p>
-                        </li>  
-                    <!--    <li>
+                        </li>
+                        <li>
+                            <h3>Marina</h3>
+                            <p>IPA Ambrata 6,2% <br><em>Birrificio Mukkeller</em></p>
+                        </li>
+                        <!-- <li>
                             <h3>Yakima Trip</h3>
                             <p>American IPA 7% <br><em>Birrificio MC-77</em></p>
                         </li> -->
@@ -419,19 +423,15 @@
                             <h3>Extrema Ratio</h3>
                             <p>Doppia IPA 7,4% <br><em>Birrificio dei Castelli</em></p>
                         </li>  -->
-                <!--        <li>
+                        <!-- <li>
                             <h3>Breaking Hops</h3>
                             <p>Doppia IPA 7,2% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-                       <li>
-                            <h3>Marina</h3>
-                            <p>IPA Ambrata 6,2% <br><em>Birrificio Mukkeller</em></p>
-			             </li> 
-                 <!--      <li>
+                        <!-- <li>
                             <h3>Nonnukka</h3>
                             <p>IPA Leggera 4,8% <br><em>Birrificio Mukkeller</em></p>
                         </li>  -->
-                    <!--    <li>
+                        <!-- <li>
                             <h3>Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
                         </li> -->
