--- a/menu/index.html
+++ b/menu/index.html
@@ -355,10 +355,10 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Birre artigianali alla Spina <br><small>Piccola 4 / Media 6 / Caraffa 12</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                        <!-- <li>
+                        <li>
                             <h3>Helles</h3>
                             <p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Italicum</h3>
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
@@ -480,10 +480,10 @@
                                 <p>Rossa tedesca 5,3% <br><em>Birrificio Bayreuther</em></p>
                             </li>
 
-                    <!--        <li>
+                            <li>
                                 <h3>Weisse 50cl <span class="price">6</span></h3>
-                                <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
-                            </li>  -->
+                                <p>Weisse tedesca 5,2% <br><em>Birrificio Maisel</em></p>
+                            </li>
                            <li>
                                 <h3>Kardinal 50cl <span class="price">6</span></h3>
                                 <p>Birra monacense 7,5%<br><em>Birrificio Norbertus</em></p>
