--- a/menu/index.html
+++ b/menu/index.html
@@ -222,15 +222,15 @@
                             <p>Manzo, scamorza affumicata, crema di funghi, speck croccante<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> -->
-                         <li>
+                     <!--    <li>
                             <h3>Inverno <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                        </li>
-                        <!-- <li>
+                        </li> -->
+                        <li>
                             <h3>Primavera <span class="price">9,5 / doppio 14,9</span></h3>
                             <p>Manzo, composta di feta, pomodorini e timo; insalata riccia</p>
-                        </li> -->
+<small>Contiene: Glutine, Latte, Uova</small></li>
                         <li>
                             <h3>Deciso <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
