--- a/menu/index.html
+++ b/menu/index.html
@@ -229,8 +229,8 @@
                         </li> -->
                         <li>
                             <h3>Primavera <span class="price">9,5 / doppio 14,9</span></h3>
-                            <p>Manzo, composta di feta, pomodorini e timo; insalata riccia</p><br>
-<small>Contiene: Glutine, Latte, Uova</small></li>
+                            <p>Manzo, composta di feta, pomodorini e timo; insalata riccia<br>
+<small>Contiene: Glutine, Latte, Uova</small></p></li>
                         <li>
                             <h3>Deciso <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
