--- a/menu/index.html
+++ b/menu/index.html
@@ -237,8 +237,8 @@
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> 
                          <li>
-                            <h3>Cacio e Pepe <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, pecorino vallesina, guanciale, pepe<br>
+                            <h3>Fave e Pecorino <span class="price">10,5 / doppio 14,9</span></h3>
+                            <p>Manzo, pecorino vallesina, guanciale, fave in porchetta<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> 
                   <!--      <li>
