--- a/asporto/index.html
+++ b/asporto/index.html
@@ -199,7 +199,7 @@
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
-                            <h3>Diablo <span class="price">10,5 / doppio 14,9</span></h3>
+                            <h3>Diablo <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
@@ -220,37 +220,37 @@
                             <p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante<br>
                             <small>Contiene: Anidride Solforosa e Solfiti, Glutine, Latte, Senape, Uova</small></p>
                         </li>
-                     <!--   <li>
+                   <!--     <li>
                             <h3>Autunno <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, scamorza affumicata, crema di funghi, speck croccante<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> -->
-                         <li>
+                     <!--    <li>
                             <h3>Inverno <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                        </li> 
-                        <!-- <li>
-                            <h3>Primavera <span class="price">9,5 / doppio 14,9</span></h3>
-                            <p>Manzo, composta di feta, pomodorini e timo; insalata riccia</p>
                         </li> -->
                         <li>
-                            <h3>Deciso <span class="price">10,5 / doppio 14,9</span></h3>
+                            <h3>Primavera <span class="price">10,9 / doppio 14,9</span></h3>
+                            <p>Manzo, composta di feta, pomodorini e timo; insalata riccia<br>
+<small>Contiene: Glutine, Latte, Uova</small></p></li>
+                        <li>
+                            <h3>Deciso <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                        </li>
+                        </li> 
                          <li>
-                            <h3>Cacio e Pepe <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, pecorino vallesina, guanciale, pepe <br>
+                            <h3>Fave e Pecorino <span class="price">10,9 / doppio 14,9</span></h3>
+                            <p>Manzo, pecorino vallesina, guanciale, fave in porchetta<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> 
-                      <!--   <li>
-                            <h3>Mantovano <span class="price">10,5 / doppio 14,9</span></h3>
+                  <!--      <li>
+                            <h3>Mantovano <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante<br>
                             <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                         </li> -->
                     <!--    <li>
-                            <h3>Estivo <span class="price">10,5 / doppio 14,9</span></h3>
+                            <h3>Estivo <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
                         </li>  -->
                         <li>
@@ -264,6 +264,7 @@
                         </li> -->
                     </ul>
                 </div>
+            </div>
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
