--- a/menu/index.html
+++ b/menu/index.html
@@ -230,13 +230,13 @@
                         <li>
                             <h3>Primavera <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, composta di feta, pomodorini e timo; insalata riccia<br>
-<small>Contiene: Glutine, Latte, Uova</small></p></li>
+                            <small>Contiene: Glutine, Latte, Uova</small></p></li>
                         <li>
                             <h3>Deciso <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> 
-                         <li>
+                        <li>
                             <h3>Fave e Pecorino <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, pecorino vallesina, guanciale, fave in porchetta<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
@@ -317,17 +317,17 @@
                             <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula<br>
-                            <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
+                                <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
                                 <h3>Blondie <span class="price">5</span></h3>
                                 <p>Brownie con nocciole. Servito con crema al mascarpone e rhum <br>
-                            <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
+                                <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout<br>
-                            <small>Contiene: Glutine, Latte, Uova</small></p>
+                                <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li>
 			                <li>
                                 <h3>Whoop<span class="price">5</span></h3>
@@ -355,18 +355,18 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Birre artigianali alla Spina <br><small>Piccola 4 / Media 6 / Caraffa 12</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                       <!-- <li>
+                        <li>
                             <h3>Helles</h3>
                             <p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Italicum</h3>
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
                         </li>
-                      <!--  <li>
+                        <li>
                             <h3>Bock</h3>
                             <p>Rossa stile tedesco dolce 6,5% <br><em>Birrificio Forst</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
@@ -379,10 +379,10 @@
                         <h3>Ape Regina</h3>
                             <p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-                       <!-- <li>
+                        <li>
                             <h3>Thee Bitter</h3>
                             <p>Bitter ale ambrata 4,2% <br><em>Birrificio Resina</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Effecto Placebo</h3>
                             <p>IPA fruttata leggera 4% <br><em>Birrificio dei Castelli</em></p>
@@ -471,10 +471,10 @@
                                 <h3>Hellerbock 50cl <span class="price">6</span></h3>
                                 <p>Keller tedesca 6,5% <br><em>Birrificio Hirsch</em></p>
                             </li> -->
-                        <!--   <li>
+                            <li>
                                 <h3>Landbier 1857 50cl <span class="price">6</span></h3>
                                 <p>Helles tedesca non filtrata 5,3% <br><em>Birrificio Bayreuther</em></p>
-                            </li> -->
+                            </li>
                             <li>
                                 <h3>Landbier Dunkel 50cl <span class="price">6</span></h3>
                                 <p>Rossa tedesca 5,3% <br><em>Birrificio Bayreuther</em></p>
@@ -573,7 +573,7 @@
                             <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
-                            <h3>Novis<span class="price">Quarto 3 / Litro 8</span></h3>
+                            <h3>Novis Lacrima <span class="price">Quarto 3 / Litro 8</span></h3>
                             <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
