--- a/menu/index.html
+++ b/menu/index.html
@@ -667,10 +667,10 @@
                             <h3>Gin Tonic Silverback <span class="price">8</span></h3>
                             <p>London Gin. Servito con acqua tonica J. Gasco</p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Gin Tonic Puro <span class="price">8</span></h3>
                             <p>Morbido. Servito con acqua tonica J. Gasco</p>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -739,19 +739,19 @@
                     <h2 class="subheader">Amari</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Varnelli, Sibilla, Tonico, Moka <span class="price">3,5</span></h3>
+                            <h3>Sibilla, Tonico, Moka <span class="price">4</span></h3>
                         </li>
                         <li>
-                            <h3>Anisetta Meletti <span class="price">3</span></h3>
+                            <h3>Varnelli, Anisetta Meletti <span class="price">3,5</span></h3>
                         </li>
                         <li>
-                            <h3>Fernet Branca, Brancamente, Montenegro, Amaro del Capo <span class="price">3</span></h3>
+                            <h3>Fernet Branca, Brancamente, Montenegro, Amaro del Capo <span class="price">3,5</span></h3>
                         </li>
                         <li>
                             <h3>Grappa Bianca 903 <span class="price">3,5</span></h3>
                         </li>
                         <li>
-                            <h3>Grappa Barricata <span class="price">3,5</span></h3>
+                            <h3>Grappa Barricata <span class="price">4</span></h3>
                         </li>
                     </ul>
                 </div>
@@ -765,7 +765,7 @@
                             <p>Costa Rica 40%. <br>Profumo di vaniglia, cuoio, cioccolato, sciroppo d'acero e menta. Al palato sentori di cioccolato, pelle, miele e menta piperita</p>
                         </li>
                      <li>
-                            <h3>Don Papa oltre 7 anni <span class="price">6</span></h3>
+                            <h3>Don Papa oltre 7 anni <span class="price">7</span></h3>
                             <p>Filippine 40%. <br>Profumo di caramello e mou. Al palato ripropone una notevole dolcezza ben bilanciata da un mix di arancia candita e persistente nota citrica</p>
                         </li> 
                         <li>
