--- a/menu/index.html
+++ b/menu/index.html
@@ -590,11 +590,11 @@
                     <h2 class="subheader">Vino Bottiglia / Calice</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Cervidoni DOC <span class="price">12,5 / 3</span></h3>
+                            <h3>Cervidoni DOC <span class="price">13,5 / 3</span></h3>
                             <p>Rosso Piceno <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
-                            <h3>Barbarossa DOC <span class="price">14,5 / 3</span></h3>
+                            <h3>Barbarossa DOC <span class="price">15,5 / 3,5</span></h3>
                             <p>Lacrima di Morro D'Alba <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <!-- <li>
@@ -606,7 +606,7 @@
                             <p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
                         </li> -->
                         <li>
-                            <h3>Costa Verde DOC <span class="price">13,5 / 3</span></h3>
+                            <h3>Costa Verde DOC <span class="price">14,5 / 3</span></h3>
                             <p>Verdicchio dei Castelli di Jesi Classico <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <!-- <li>
@@ -626,8 +626,12 @@
                             <p><em>Cantina di Tavignano</em></p>
                         </li> -->
                         <li>
-                            <h3>Prosecco Treser DOCG <span class="price">15 / 3,5</span></h3>
+                            <h3>Prosecco Treser DOCG <span class="price">16 / 3,5</span></h3>
                             <p>Brut <br><em>Cantina Serre di Pederiva</em></p>
+                        </li>
+                        <li>
+                            <h3>Prosecco Lovre DOCG <span class="price">16 / 3,5</span></h3>
+                            <p>Extra Dry <br><em>Cantina Serre di Pederiva</em></p>
                         </li>
                     </ul>
                 </div>
@@ -651,10 +655,10 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Drinks</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                        <!-- <li>
+                        <li>
                             <h3>Spritz <span class="price">5</span></h3>
                             <p>Aperol, Campari</p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Gin Tonic Ginepraio <span class="price">9</span></h3>
                             <p>Biologico. Servito con acqua tonica J. Gasco</p>
