--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 		</div>
 	</header>
 <!-- fine header -->
-	<div class="panel-home-2n">
+	<!-- <div class="panel-home-2n">
 		<div class="row">
 			<div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
-				<h1>Covid</h1>
+				<h1>Estate</h1>
 			</div>
 		</div>
 		<div class="row">
@@ -104,13 +104,13 @@
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno, <strong>non è necessario avere il green pass</strong>.</p> -->
+				<p>Il ristorante nel periodo estivo è aperto solo all'esterno, <strong>non è necessario avere il green pass</strong>.</p>
 				<p>Per mangiare all'interno è <strong>obbligatorio il green pass</strong>.</p>
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
-				<!-- <a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a> -->
+				<a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="panel-home-n">
 		 <!-- <div class="row">
 			<div class="medium-12 large-12 columns">
@@ -171,8 +171,8 @@
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
 				<p>Siamo specialisti in Hamburger Goduriosi e Birra Artigianale, ma quella buona.</p>
-				<p>Gli Hamburger, di nostra produzione, contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane.</p>
-				<p>Per le Birre Artigianali, collaboriamo con micro birrifici marchigiani di comprovata qualità, non disdegnando eccellenze tedesche di nicchia come Zotler e Mariahilfer.</p>
+				<p>Gli Hamburger, di nostra produzione, contengono solo carne di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane.</p>
+				<p>Per le Birre Artigianali, collaboriamo con micro birrifici marchigiani di comprovata qualità: Birrificio dei Castelli, Mukkeller, MC-77, Resina.</p>
 				<a itemprop="menu" role="button" href="https://www.beerstrot.it/menu/">Scopri il Menù &rarr;</a>
 			</div>
 		</div>
