--- a/menu/index.html
+++ b/menu/index.html
@@ -306,7 +306,8 @@
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
                             <li>
                                 <h3>Crumble <span class="price">5</span></h3>
-                                <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
+                                <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente <br>
+                                <small>Contiene: Latte, Uova</small></p>
                             </li>
                             <!-- <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
