--- a/menu/index.html
+++ b/menu/index.html
@@ -321,7 +321,7 @@
                             </li>
                             <li>
                                 <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole. Servito con crema al mascarpone e rhum <br>
+                                <p>Brownie con nocciole. Servito con crema chantilly<br>
                                 <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                            <!-- <li>
